--- a/admissionCommittee.css
+++ b/admissionCommittee.css
@@ -29,30 +29,17 @@ a{
 
 .rightH{
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     width: 425px;
     margin-left: 400px;
 }
 
-.in , .up{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: solid 1px #D9EAF2;
-    border-radius: 4px;
-    background-color: #19374A;
-    color: #D9EAF2;
-    height: 50px;
+.rightH img{
+    margin-left: 20px;
 }
 
-.up{
-    width: 250px;
-    font-size: 20px;
-}
-
-.in{
-    width: 150px;
-    font-size: 20px;
+.adm img{
+    margin-top: -20px;
 }
 
 .heading{
