--- a/information.css
+++ b/information.css
@@ -42,6 +42,12 @@ a{
     margin-top: -20px;
 }
 
+.firstPart{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+
 .cont-left{
     height: 250px;
     width: 35px;
@@ -60,86 +66,51 @@ a{
     justify-content: center;
 }
 
-
-.rightSide{
-    display: flex;
-    align-items: center;
-    margin-left: 250px;
+.all{
+    margin-top: 70px;
 }
 
-.firstPart{
-    display: flex;
-    margin-bottom: 100px;
-}
-
-
-
-
-
-
-
-
-.Calendar{
-    color: #19374A;
-    border: solid 2px #19374A;
-    height: 400px;
-    border-radius: 16px;
-    margin-left: 200px;
-}
-
-#calendar2 {
-  font: monospace;
-  height: 400px;
-  width: 500px;
-  font-size: 15px;
-  text-align: center;
-}
-
-#calendar2 thead tr:last-child {
-  font-size: 14px;
-  color: #19374A;
-  font-weight: 500;
-}
-
-#calendar2 thead tr:nth-child(1) td:nth-child(2) {
-  color: #fff;
-  font-size: 20px;
-  background-color: #19374A;
-}
-
-#calendar2 thead tr:nth-child(1) td:nth-child(1):hover, #calendar2 thead tr:nth-child(1) td:nth-child(3):hover {
-  cursor: pointer;
-}
-
-#calendar2 tbody td {
-  color: #19374A;
-  background-color: #8CD4FC;
-  border-radius: 25%;
-}
-
-#calendar2 tbody td:nth-child(n+7), #calendar2 .holiday {
-  color: #fff;
-  background-color: #19374A;
-  border-radius: 25%;
-}
-
-.Left , .Right{
+.accordion {
     background-color: #19374A;
     color: #fff;
-    width: 65px;
+    font-size: 18px;
+    width: 1650px;
+    height: 80px;
+    border: 1px solid #fff;
+    margin-right: 100px;
 }
 
-.Left{
-    border-top-left-radius: 16px;
+.active, .accordion:hover {
+    background-color: #19374A;
 }
 
-.Right{
-    border-top-right-radius: 16px;
+.panel {
+    max-height: 0;
+    overflow: hidden;
 }
 
+.accordion:after {
+    content: '\002B'; /* Код Юникода для символа "плюс" (+) */
+    color: #fff;
+    font-size: 18px;
+    float: right;
+    margin-left: 4px;
+}
+  
+  .active:after {
+    content: "\2212"; /* Код Юникода для символа "минус" (-) */
+}
 
+.H2{
+    font-size: 16px;
+    font-weight: 700;
+    color: #19374A;
+}
 
-
+.text{
+    color: #19374A;
+    margin-top: -15px;
+}
 
 .footer{
     background-color: #19374A;
