--- a/ourSpecialties.css
+++ b/ourSpecialties.css
@@ -68,6 +68,58 @@ a{
 
 }
 
+.sidenav {
+    height: 640px;
+    width: 0px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #19374A;
+    overflow-x: hidden;
+    transition: 0.5s;
+    background-image: url(/img/BLURR.png);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+}
+
+.closebtn{
+    margin-top: 570px;
+    width: 200px;
+    height: 30px;
+    background-color: #D1E7F1;
+    margin-left: 690px;
+}
+
+.close{
+    font-size: 26px;
+    margin-left: 45px;
+    color: #19374A;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
 .rightSide{
     margin-top: 20px;
 }
